--- a/CarryUsServer/build.gradle
+++ b/CarryUsServer/build.gradle
@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
